--- a/src/main/java/littleencrypter/menu/menu.properties
+++ b/src/main/java/littleencrypter/menu/menu.properties
@@ -1,2 +1,2 @@
 dialog.about.title=About Dialog
-dialog.about.message=JavaFX 8 demo app using afterburner.fx (http://afterburner.adam-bien.com/) and ControlsFX (http://fxexperience.com/controlsfx/)
+dialog.about.message=JavaFX 8 demo app using:\n- afterburner.fx\n- ControlsFX\n- Lambda Behave (testing)
