--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- Compile dependencies -->
-		<afterburner-fx.version>1.6.1-SNAPSHOT</afterburner-fx.version>
+		<afterburner-fx.version>1.6.2</afterburner-fx.version>
 		<controlsfx.version>8.0.6_20</controlsfx.version>
-		<slf4j-api.version>1.7.7</slf4j-api.version>
-		<log4j.version>2.0.2</log4j.version>
+		<slf4j-api.version>1.7.12</slf4j-api.version>
+		<log4j.version>2.3</log4j.version>
 
 		<!-- Test dependencies -->
-		<lambda-behave.version>0.4-SNAPSHOT</lambda-behave.version>
+		<lambda-behave.version>0.3</lambda-behave.version>
 	</properties>
 	<dependencies>
 		<!-- Compile dependencies -->
@@ -72,7 +72,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.3</version>
 				<configuration>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
@@ -80,7 +80,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.8</version>
+				<version>2.10</version>
 				<executions>
 					<execution>
 						<id>unpack-dependencies</id>
@@ -99,7 +99,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.3.2</version>
+				<version>1.4.0</version>
 				<executions>
 					<execution>
 						<id>package-jar</id>
@@ -125,6 +125,16 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<includes>
+						<include>**/*Spec.java</include>
+					</includes>
+				</configuration>
 			</plugin>
 		</plugins>
 		<resources>
